--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.63.6",
     "three": "^0.154.0",
     "vite": "^4.3.9",
+    "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2",
     "vue": "^3.3.4"
   }
