--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,9 @@
     "default_popup": "index.html",
     "default_title": "Speed Looters"
   },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval';"
+  },
   "icons": { 
     "16": "img/png/icon16.png",
     "32": "img/png/icon32.png",
