--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "devDependencies": {
     "@dimforge/rapier3d": "^0.11.2",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^4.5.1",
+    "peerjs": "^1.5.1",
     "sass": "^1.63.6",
-    "three": "^0.154.0",
-    "vite": "^4.3.9",
+    "three": "^0.159.0",
+    "vite": "^5.0.4",
     "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2",
     "vue": "^3.3.4"
